Don't pick a drop operation that the source doesn't support.

If a page doesn't specify a drop operation, DragController's defaultOperationForDrag() makes an attempt to choose a reasonable operation based on what the source supports.

Unfortunately, if the source supports "generic" but not move, defaultOperationForDrag() chooses an operation that the source doesn't support, and the drop fails.

Fix it by not returning "move" if it is not supported.

BUG=610085
TEST=none
CQ_INCLUDE_TRYBOTS=tryserver.blink:linux_blink_rel,mac_blink_rel,win_blink_rel

Review-Url: https://codereview.chromium.org/2030683003
Cr-Commit-Position: refs/heads/master@{#404885}

Former-commit-id: 57b70dae30c2bc7d60e70efd8ebae83e01fe9119