third_party/WebKit/Source/core/page/DragController.cpp
@@ -584,7 +584,7 @@ static DragOperation defaultOperationForDrag(DragOperation srcOpMask)
         return DragOperationCopy;
     if (srcOpMask == DragOperationNone)
         return DragOperationNone;
-    if (srcOpMask & DragOperationMove || srcOpMask & DragOperationGeneric)
+    if (srcOpMask & DragOperationMove)
         return DragOperationMove;
     if (srcOpMask & DragOperationCopy)
         return DragOperationCopy;
